# kaizen-redmine-mcp

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
src/kaizen_redmine_mcp/: __main__.py  config.py  redmine_client.py  server.py
src/kaizen_redmine_mcp/tools/: enums.py  issues.py  projects.py  time_entries.py
tests/: conftest.py  test_enums.py  test_issues.py  test_projects.py  test_time_entries.py
