[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kaizen-redmine-mcp"
version = "0.1.0"
description = "Compact MCP server for Redmine — built for Kaizen 2B"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.3,<3",
    "httpx>=0.27",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["kaizen_redmine_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
